# ValidatieApp

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setup.sh
includes/characters/: BaseCharacter.hpp  Fireboy.hpp  Watergirl.hpp
includes/characters/events/: JumpEvent.h  MoveEvent.hpp
includes/characters/input/: MovementInputHandler.hpp
includes/characters/movement/: MovementComponent.hpp
includes/enums/: Direction.hpp
src/: LevelBuilder.cpp  LevelBuilder.h  Main.cpp  RectangleRenderer.h  Server.cpp
src/characters/: BaseCharacter.cpp  Fireboy.cpp  Watergirl.cpp
src/characters/events/: JumpEvent.cpp  MoveEvent.cpp
src/characters/input/: MovementInputHandler.cpp
src/characters/movement/: MovementComponent.cpp
